# fastapi-tasks-container

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt
